Filled in all of the data in the certificates JSON file that will be visible to users at the time of deploy; wrote logic to keep track of which certificate images and certificate description to display based on which element the user clicks on; got rid of the ImageWindow and DescriptionWindow components to avoid weird passing-up of state; transferred the ImageWindow and DescriptionWindow UI code to the Certificates component so that state could be accessed at a single level; added some CSS changes to make the fully-functional Certificates section mobile-first and responsive

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -298,6 +298,11 @@ h1, h3 {
 //////// CERTIFICATES ////////
 ////////////////////////////*/
 
+.certificates-container {
+  margin: 0;
+  width: 100%;
+}
+
 .certificates {
   display: flex;
   flex-direction: column;
@@ -328,11 +333,15 @@ h1, h3 {
 .descriptionWindow {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   width: 100%;
   background-color: var(--lightgray);
   margin: 0;
+}
+
+.descriptionWindow > h2 {
+  text-align: center;
 }
 
 .descriptionBody {
@@ -360,6 +369,10 @@ h1, h3 {
 
   .portfolioImage {
     max-width: 90%;
+  }
+
+  .descriptionWindow {
+    overflow-y: scroll;
   }
 
 }
